--- a/{{cookiecutter.github_repository}}/{{cookiecutter.main_module}}/templates/pages/about.html
+++ b/{{cookiecutter.github_repository}}/{{cookiecutter.main_module}}/templates/pages/about.html
@@ -1,9 +1,13 @@
 {% raw %}{% extends 'pages/base.html' %}
-{% load i18n %}
-{% block title %}{% trans 'About' %} • {{ block.super }}{% endblock title %}
+{% load staticfiles i18n %}{% endraw %}
+{%- if cookiecutter.add_webpack.lower() == 'y' %}
+{%- raw %}{% load webpack_static from webpack_loader %}
+{% load render_bundle from webpack_loader %}{%- endraw %}
+{%- endif %}
+{% raw %}{% block title %}{% trans 'About' %} • {{ block.super }}{% endblock title %}
 {% block body_classes %}{{ block.super}} page-about {% endblock body_classes %}
 {% block content %}
-    <p>
+    <div id="app">
         {% trans 'About page comming soon!!' %}
-    </p>
+    </div>
 {% endblock content %}{% endraw %}
